04-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-app
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
